--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generative-art",
   "version": "0.1.0",
-  "homepage": "gmeisinger.github.io/generative-art",
+  "homepage": "https://gmeisinger.github.io/generative-art",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
